fix: intentionally increase the version of "snakeyaml" because of security vulnerability
see https://stackoverflow.com/a/73708060 for more details

--- a/pom.xml
+++ b/pom.xml
@@ -38,4 +38,16 @@
 		</plugins>
 	</build>
 
+	<dependencyManagement>
+		<dependencies>
+
+			<dependency>
+				<groupId>org.yaml</groupId>
+				<artifactId>snakeyaml</artifactId>
+				<version>1.32</version>
+			</dependency>
+
+		</dependencies>
+	</dependencyManagement>
+
 </project>
